# dsp

./: .gitignore
notebook/: output.txt  test.ipynb  test_gen.ipynb
pyaerial/: CMakeLists.txt  README.md  pyproject.toml  setup.py
pyaerial/container/: build.sh  build_devel.sh  pyaerial_recipe.py  requirements-amd64.txt  requirements-arm64.txt  run_devel.sh
pyaerial/docs/: Makefile
pyaerial/docs/source/: aerial.phy5g.algorithms.rst  aerial.phy5g.ldpc.rst  aerial.phy5g.pdsch.rst  aerial.phy5g.pusch.rst  aerial.phy5g.rst  aerial.util.rst  conf.py  examples.rst  index.rst  reference.rst
pyaerial/models/: llrnet.onnx
pyaerial/notebooks/: datalake_channel_estimation.ipynb  example_pusch_simulation.ipynb
pyaerial/pybind11/: pycuphy_cfo_ta_est.cpp  pycuphy_cfo_ta_est.hpp  pycuphy_chan_model.cpp  pycuphy_chan_model.hpp  pycuphy_channel_eq.cpp  pycuphy_channel_eq.hpp  pycuphy_channel_est.cpp  pycuphy_channel_est.hpp  pycuphy_crc_check.cpp  pycuphy_crc_check.hpp  pycuphy_csirs_tx.cpp  pycuphy_csirs_tx.hpp  pycuphy_debug.cpp  pycuphy_debug.hpp  pycuphy_ldpc.hpp  pycuphy_ldpc_decoder.cpp  pycuphy_ldpc_derate_match.cpp  pycuphy_ldpc_encoder.cpp  pycuphy_ldpc_rate_match.cpp  pycuphy_ldpc_util.cpp  pycuphy_noise_intf_est.cpp  pycuphy_noise_intf_est.hpp  pycuphy_params.hpp  pycuphy_pdsch.cpp  pycuphy_pdsch.hpp  pycuphy_pdsch_params.cpp  pycuphy_pusch.cpp  pycuphy_pusch.hpp  pycuphy_pusch_params.cpp  pycuphy_pybind.cpp  pycuphy_rsrp.cpp  pycuphy_rsrp.hpp  pycuphy_srs_chest.cpp  pycuphy_srs_chest.hpp  pycuphy_trt_engine.cpp  pycuphy_trt_engine.hpp  pycuphy_util.cpp  pycuphy_util.hpp
pyaerial/scripts/: .pylintrc  build_docs.sh  install_dev_pkg.sh  run_notebooks.sh  run_static_tests.sh  run_unit_tests.sh
pyaerial/src/aerial/: __init__.py  version_aerial.py
pyaerial/src/aerial/phy5g/: __init__.py  chest_filters.py  params.py  types.py
pyaerial/src/aerial/phy5g/algorithms/: __init__.py  cfo_ta_estimator.py  channel_equalizer.py  channel_estimator.py  demapper.py  noise_intf_estimator.py  rsrp_estimator.py  srs_channel_estimator.py  trt_engine.py
pyaerial/src/aerial/phy5g/chan_models/: __init__.py  fading_chan.py
pyaerial/src/aerial/phy5g/chest_coeffs/: cuPhyChEstCoeffs.h5
pyaerial/src/aerial/phy5g/ldpc/: __init__.py  crc_check.py  decoder.py  derate_match.py  encoder.py  rate_match.py  util.py
pyaerial/src/aerial/phy5g/pdsch/: __init__.py  csirs_tx.py  pdsch_tx.py
pyaerial/src/aerial/phy5g/pusch/: __init__.py  pusch_rx.py
pyaerial/src/aerial/pycuphy/: __init__.py
pyaerial/src/aerial/util/: __init__.py  cuda.py  data.py  fapi.py
pyaerial/tests/: conftest.py  test_phy5g_algorithms.py  test_phy5g_cfo_ta_estimator.py  test_phy5g_channel_equalizer.py  test_phy5g_channel_estimator.py  test_phy5g_csirs_tx.py  test_phy5g_fading_chan.py  test_phy5g_ldpc_crc_check.py  test_phy5g_ldpc_decoder.py  test_phy5g_ldpc_derate_match.py  test_phy5g_ldpc_encoder.py  test_phy5g_ldpc_endtoend.py  test_phy5g_ldpc_random_data.py  test_phy5g_ldpc_rate_match.py  test_phy5g_noise_intf_estimator.py  test_phy5g_ofdm.py  test_phy5g_pdsch_tx.py  test_phy5g_pusch_rx.py  test_phy5g_rsrp_estimator.py  test_phy5g_srs_channel_estimator.py  test_phy5g_tdl.py  test_phy5g_trt_engine.py  test_util_data.py  test_util_fapi.py
pyaerial/tests/cpp/: CMakeLists.txt  test_pusch_rx.cpp  test_pusch_rx.hpp  test_pusch_rx_main.cpp
src/: __init__.py  data.py  my_decoder.py  my_encoder.py  my_pusch_config.py  my_pusch_pilot_pattern.py  my_simulator.py  my_timer.py  my_utils.py
